--- a/CheckersLobby.html
+++ b/CheckersLobby.html
@@ -5,7 +5,8 @@
 	<meta charset="UTF-8">
 	<title>Checkers Lobby</title>
 	<script src="http://code.jquery.com/jquery.js"></script>
-	<script src="CheckersClient.js"></script>
+	<script src="CheckersShared.js"></script>
+	<script src="CheckersClientLobby.js"></script>
 </head>
 <body>
 
