--- a/CheckersGame.html
+++ b/CheckersGame.html
@@ -32,7 +32,7 @@
 		}
 	</script>
 </head>
-<body>
+<body onload="OnBodyLoad()">
 
 	<h1>Checkers Game</h1>
 	
@@ -40,8 +40,6 @@
 		<canvas id="canvas" width="512" height="512" style="border:1px solid #000000;">
 		</canvas>
 	</p>
-	
-	<input type="button" value="Debug" onclick="OnBodyLoad()">
 
 </body>
 
