--- a/CheckersGame.html
+++ b/CheckersGame.html
@@ -32,7 +32,7 @@
 		}
 	</script>
 </head>
-<body onload="OnBodyLoad()">
+<body>
 
 	<h1>Checkers Game</h1>
 	
@@ -40,6 +40,11 @@
 		<canvas id="canvas" width="512" height="512" style="border:1px solid #000000;">
 		</canvas>
 	</p>
+	
+	<!-- We need to tell the player which color they are somewhere. -->
+	
+	<input type="button" value="Clear Selection" onclick="OnClearSelection()">
+	<input type="button" value="Take Turn!" onclick="OnTakeTurn()">
 
 </body>
 
