--- a/CheckersGame.html
+++ b/CheckersGame.html
@@ -54,6 +54,8 @@
 	
 		<h1>Checkers Game</h1>
 		
+		<p id="statusText">Status text goes here.</p>
+		
 		<p>
 			<canvas id="canvas" width="800" height="800" style="border:1px solid #000000;">
 				The canvas element is not supported by your browser.
