--- a/CheckersGame.html
+++ b/CheckersGame.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Checkers Game</title>
+	<script src="/socket.io/socket.io.js"></script>
 	<script src="http://code.jquery.com/jquery.js"></script>
 	<script src="CheckersShared.js"></script>
 	<script src="CheckersClientGame.js"></script>
