try to fix link

--- a/CheckersLobby.html
+++ b/CheckersLobby.html
@@ -46,7 +46,7 @@
 		<h1>Checkers Lobby</h1>
 
 		<form>
-			<p><span id="startNewGame"><a>Start a new game</a></span> or join a player waiting for an opponent.</p>
+			<p><span id="startNewGame"><a href="" onclick="OnStartNewGameClicked()">Start a new game</a></span> or join a player waiting for an opponent.</p>
 		</form>
 
 		<div id="waitingList">
