--- a/CheckersLobby.html
+++ b/CheckersLobby.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Checkers Lobby</title>
-	<script src="http://code.jquery.com/jquery.js"></script>
+	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="CheckersShared.js"></script>
 	<script src="CheckersClientLobby.js"></script>
 	<style type="text/css">
@@ -45,7 +45,7 @@
 	<div id="all">
 		<h1>Checkers Lobby</h1>
 
-		<p><span id="startNewGame"><a href="" onClick="OnStartNewGameClicked( event )">Start a new game</a></span> or join a player waiting for an opponent.</p>
+		<p><span id="startNewGame"><a href="">Start a new game</a></span> or join a player waiting for an opponent.</p>
 
 		<div id="waitingList">
 		</div>
