--- a/CheckersGame.html
+++ b/CheckersGame.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Checkers Game</title>
 	<script src="/socket.io/socket.io.js"></script>
-	<script src="http://code.jquery.com/jquery.js"></script>
+	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="CheckersShared.js"></script>
 	<script src="CheckersClientGame.js"></script>
 	<script id="boardVertexShader" type="x-shader/x-vertex">
