terrible AI, but i think i know how to make it better.

--- a/CheckersLobby.html
+++ b/CheckersLobby.html
@@ -45,7 +45,10 @@
 	<div id="lobbyPart">
 		<h1>Checkers Lobby</h1>
 
-		<p><span id="startNewGame"><a href="">Start a new game</a></span> or join a player waiting for an opponent.</p>
+		<p><a id="startNewGame" href="">Start a new game</a> or join a player waiting for an opponent.
+		You can also <a id="startNewGameAgainstComputer" href="">play against the computer</a>.  As of this
+		writing, the computer AI is very stupid.  I'm working on making it smarter.
+		</p>
 
 		<div id="waitingList">
 		</div>
